--- a/README.Rmd
+++ b/README.Rmd
@@ -19,37 +19,34 @@ knitr::opts_chunk$set(
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
-The goal of utilitybeltuserinput is to ...
+The goal of utilitybeltuserinput is to provide robust, intuitive methods for collecting user input. 
+
+Key differences to traditional methods like `askYesNo` is that here we will keep re-asking the question until the user gives a satisfactory input, rather than throwing an error. Also, we number all choices provided to make it easier for the end-user to specify their choices.
+
 
 ## Installation
 
-You can install the development version of utilitybeltuserinput like so:
+You can install the development version of utilitybeltuserinput from [GitHub](https://github.com/) with:
 
 ``` r
-# FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
+# install.packages("devtools")
+devtools::install_github("selkamand/utilitybeltuserinput")
 ```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
 
-```{r example}
+
+```{r example, eval=FALSE}
 library(utilitybeltuserinput)
-## basic example code
+
+## Choose from curated list of options
+readline_choose(
+  prompt = "Which fruit is your favourite?",
+  choices = c("Apples", "Oranges", "Pairs")
+)
+
+## Choose yes/no
+readline_choose_yes_or_no("Do you like apples?")
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
