--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ Key differences to traditional methods like `askYesNo` is that here we will keep
 
 ## Installation
 
-You can install the development version of utilitybeltuserinput from [GitHub](https://github.com/) with:
+You can install the development version of `utilitybeltuserinput` from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
