--- a/README.Rmd
+++ b/README.Rmd
@@ -16,17 +16,18 @@ knitr::opts_chunk$set(
 # utilitybeltuserinput
 
 <!-- badges: start -->
+
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+
 <!-- badges: end -->
 
-The goal of utilitybeltuserinput is to provide robust, intuitive methods for collecting user input. 
+The goal of utilitybeltuserinput is to provide robust, intuitive methods for collecting user input.
 
 Key differences to traditional methods like `askYesNo` is that here we will keep re-asking the question until the user gives a satisfactory input, rather than throwing an error.
 
-
 ## Installation
 
-You can install the development version of `utilitybeltuserinput` from [GitHub](https://github.com/) with:
+You can install the development version of **utilitybeltuserinput** from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
@@ -34,8 +35,6 @@ devtools::install_github("selkamand/utilitybeltuserinput")
 ```
 
 ## Example
-
-
 
 ```{r example, eval=FALSE}
 library(utilitybeltuserinput)
@@ -49,4 +48,3 @@ readline_choose(
 ## Choose yes/no
 readline_choose_yes_or_no("Do you like apples?")
 ```
-
